# lyso

./: .gitignore  Cargo.toml  LICENSE  README.md  \
benches/bench-fasta/: bench_fasta.rs
benches/bench-fastq/: bench_fastq.rs
lyso-bam/: Cargo.toml
lyso-bam/src/: lib.rs  parser.rs  reader.rs
lyso-cli/: Cargo.toml
lyso-cli/src/: main.rs
lyso-common/: Cargo.toml
lyso-common/src/: lib.rs  util.rs
lyso-fasta/: Cargo.toml
lyso-fasta/src/: indexer.rs  lib.rs  parser.rs  reader.rs
lyso-fastq/: Cargo.toml
lyso-fastq/src/: index.rs  lib.rs  parser.rs  reader.rs
resources/test_data/: test.fastq  test.fastq.fai  trunc.fastq
src/: main.rs  util.rs
src/_trash/: fastq.rs  token.rs
src/idx/: idx.rs  mod.rs
src/io/: fasta.rs  fastq.rs  mmap.rs  mod.rs
src/util/: util.rs
