[package]
name = "lyso-fastq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
lyso-common = { path = "../lyso-common/" }
nom = "7.1.3"
thiserror = "1.0.50"

[[bench]]
name = "bench-fastq"
bench = true
path = "../benches/bench-fastq/bench_fastq.rs"
